--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pillow>=9.0.0
-pytesseract>=0.3.9
-# Ohne feste Version für PyQt5, um Konflikte zu vermeiden
-pyqt5
+pillow==9.5.0
+pytesseract==0.3.10
+pyqt5==5.15.9
